--- a/package.json
+++ b/package.json
@@ -3,8 +3,20 @@
     "version": "1.2.0",
     "homepage": "http://zeptojs.com",
     "private": false,
-    "publishConfig":{"registry":"http://mvn.sdfy.joyconn.cn:10006/repository/npm-hosted/"},
+    "publishConfig": {
+        "registry": "http://mvn.sdfy.joyconn.cn:10006/repository/npm-hosted/"
+    },
     "scripts": {
+        "build": "webpack  --config webpack.config.sdk.js"
+    },
+    "devDependencies": {
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "uglifyjs-webpack-plugin": "^1.3.0",
+        "crypto-js": "^4.0.0",
+        "webpack-bundle-analyzer": "^3.6.1"
     },
     "repository": "https://github.com/cn-joyconn/joyconn-zepto.git",
     "license": "MIT"
