--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "joyconn-zepto",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "homepage": "http://zeptojs.com",
     "private": false,
     "publishConfig": {
@@ -10,13 +10,12 @@
         "build": "webpack  --config webpack.config.sdk.js"
     },
     "devDependencies": {
-        "webpack": "^4.42.1",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "crypto-js": "^4.0.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "uglifyjs-webpack-plugin": "^1.3.0",
-        "crypto-js": "^4.0.0",
-        "webpack-bundle-analyzer": "^3.6.1"
+        "webpack": "^5.72.0",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.9.2"
     },
     "repository": "https://github.com/cn-joyconn/joyconn-zepto.git",
     "license": "MIT"
